--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
-    "telegraf": "^4.16.3"
+    "node-fetch": "^3.3.2",
+    "telegraf": "^4.16.3",
+    "util": "^0.12.5"
   }
 }
